<resources>
    <string name="app_name">PasToutSeul</string>
    <string name="identifiant">identifiant</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="s_inscrire">s\'inscrire</string>
    <string name="mode_visiteur">mode visiteur</string>
    <string name="connecter">Connecter</string>
    <string name="adresse_e_mail">adresse e-mail</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="parametre">paramètres</string>
    <string name="amis">amis</string>
    <string name="salut_bg">salut bg</string>
    <string name="title_activity_map">Map</string>
    <string name="prénom">prénom</string>
    <string name="Avatar">Avatar</string>
    <string name="appli">PasToutSeul</string>
    <string name="locate_and_zoom">locate and zoom</string>
    <string name="nom">nom</string>
    <string name="actuel">actuel :</string>
    <string name="pas_de_conversation">Vous n\'avez aucune conversation à afficher</string>
</resources>