<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="5dp"
    android:layout_width="5dp">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".map" />

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/amis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chat"
            android:text="@string/amis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/parametre"
            android:onClick="Click"
            android:src="@android:drawable/ic_media_pause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="62dp"/>

        <ImageButton
            android:id="@+id/locatezoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/locate_and_zoom"
            android:onClick="locatezoom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/transparent"
            android:src="@drawable/ic_location" />

        <ImageButton
            android:id="@+id/btnmapclick"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/helpadd"
            android:onClick="mapclick"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>