<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".menu"
    android:background="@drawable/orange_jaune">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_weight="1"
        android:contentDescription="@string/Avatar"
        android:onClick="ClickCompte"
        android:src="@drawable/login_image" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="ClickCompte"
        android:text="@string/prénom"
        android:textColor="#111"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="ClickCompte"
        android:text="@string/nom"
        android:textColor="#333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="10"
            android:textColor="#111"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Amis en ligne" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="10"
            android:textColor="#111"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Amis hors-ligne" />
    </LinearLayout>

    <TextView
        android:textColor="#333"
        android:gravity="center"
        android:id="@+id/textView9"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="compte"
        android:textSize="20sp"
        android:onClick="ClickCompte"/>

    <TextView
        android:id="@+id/textView10"
        android:textColor="#333"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="confidentialité et sécurité"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView11"
        android:textColor="#333"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="préférences"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView12"
        android:textColor="#333"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="A propos de notre appli"
        android:textSize="20sp"/>

</LinearLayout>